--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mongoose": "^5.13.7",
     "node-fetch": "^2.6.7",
     "nodemon": "^2.0.14",
