--- a/package.json
+++ b/package.json
@@ -7,11 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
-
   "engines": {
     "node": "16.x"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -23,6 +21,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.12.1",
+    "festivos-colombia": "^0.0.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
     "mongoose": "^5.13.7",
